Implement dark mode, register, login and landing pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- material sidenav, header and page content -->
+<!-- material sidenav, header and page content
 
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
@@ -86,8 +86,8 @@
             <span class="user-name">John Doe</span>
         </div>
     </mat-toolbar>
-    <div class="page-content">
+    <div class="page-content"> -->
       <router-outlet></router-outlet>
-    </div>
+    <!-- </div>
   </mat-sidenav-content>
-</mat-sidenav-container>
+</mat-sidenav-container> -->
