--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,65 +7,8 @@
     [opened]="true">
     <mat-nav-list>
       <div class="icons">
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
-        <a mat-list-item routerLink="/home" routerLinkActive="active">
-          <mat-icon aria-label="Home icon" style="color: #ffffff;">home</mat-icon>
-        </a>
+      <app-comm-icon></app-comm-icon>
       </div>
-      
       <div class="bottom-icons">
         <a mat-list-item routerLink="/login" routerLinkActive="active">
           <mat-icon aria-label="Logout icon" style="color: #ffffff;">home</mat-icon>
@@ -79,7 +22,6 @@
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <span>GameHub</span>
-
         <span class="spacer"></span>
         <div class="user-info">
             <img class="user-image" src="https://picsum.photos/200" alt="user profile picture">
