--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -1,3 +1,5 @@
+<app-new-post-exploreview *ngIf="!isMobile"></app-new-post-exploreview>
+<mat-divider *ngIf="!isMobile"></mat-divider>
 <app-post-exploreview></app-post-exploreview>
 <app-post-exploreview></app-post-exploreview>
 <app-post-exploreview></app-post-exploreview>
