--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -18,7 +18,7 @@
         </mat-form-field>
         <!-- submit -->
         <br>
-        <button mat-raised-button color="primary" (click)="loginUser()" [disabled]="loginForm.invalid">Login</button>
+        <button mat-raised-button color="primary" (click)="loginUser()" [disabled]="loginForm.invalid || loginForm.disabled">Login</button>
       </form>
     </mat-card-content>
   </mat-card>
