--- a/src/app/components/new-post-exploreview/new-post-exploreview.component.html
+++ b/src/app/components/new-post-exploreview/new-post-exploreview.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card style="background-color:rgba(0,0,0,0.5);">
     <mat-card-header>
         <div mat-card-avatar>
             <img src="https://picsum.photos/200" alt="" style="border-radius: 50%; width: 2rem; height: 2rem; border: 2px solid black;">
