--- a/src/app/components/post-exploreview/post-exploreview.component.html
+++ b/src/app/components/post-exploreview/post-exploreview.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card style="background-color: rgba(0, 0, 0, 0.5); color:#f5f5f5">
 <mat-card-content style="display:flex; flex-direction:row;">
     <img src="https://picsum.photos/200" alt="" style="border-radius: 50%; width: 3rem; height: 3rem; border: 2px solid black;">
     <div class="userInfo">
@@ -23,4 +23,4 @@
     </button>
 </mat-card-actions>
 </mat-card>
-<mat-divider></mat-divider>
+<mat-divider style="color:#f5f5f5"></mat-divider>
