pedro was here :)

--- a/src/app/components/navigation/toolbar/toolbar.component.html
+++ b/src/app/components/navigation/toolbar/toolbar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar color="primary" style="display:flex; position:fixed;top:0;">
   <div class="center-icons">
-    <a mat-icon-button routerLink="/**" routerLinkActive="active">
+    <a mat-icon-button routerLink="/feed" routerLinkActive="active">
       <mat-icon color="white">videogame_asset</mat-icon>
     </a>
-    <a *ngIf="!isMobile" routerLink="/**" routerLinkActive="active" style="margin-left:1rem;text-decoration: none; color:white;">
+    <a *ngIf="!isMobile" routerLink="/feed" routerLinkActive="active" style="margin-left:1rem;text-decoration: none; color:white;">
       <span>GameHub</span>
     </a>
   </div>
