--- a/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
+++ b/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
@@ -1,1 +1,12 @@
-<p>new-post-mobile works!</p>
+<div class="container">
+    <mat-card style="background-color:transparent;display:flex;">
+        <a mat-icon-button style="padding:2rem;">
+            <mat-icon color="white">arrow_back</mat-icon>
+        </a>
+        <mat-card-title style="text-align:left; padding:2rem;">Post</mat-card-title>
+        <mat-card-content>
+            <textarea style=" color:white; width:auto; height:10rem;border-color:transparent; background-color: transparent;"></textarea>
+            <mat-divider></mat-divider>
+        </mat-card-content>
+    </mat-card>
+</div>
