--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -2,7 +2,7 @@
     <app-sidenav></app-sidenav>
 </mat-sidenav-container>
     <div #page class="nav-page-content">
-        <app-feed></app-feed> /* This is the main page */
+        <app-feed></app-feed> <!-- This is the main page  -->
     </div>
     <app-toolbar></app-toolbar>
 <app-mobilenav></app-mobilenav>
