--- a/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
+++ b/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
@@ -1,12 +1,36 @@
 <div class="container">
     <mat-card style="background-color:transparent;display:flex;">
-        <a mat-icon-button style="padding:2rem;">
-            <mat-icon color="white">arrow_back</mat-icon>
-        </a>
-        <mat-card-title style="text-align:left; padding:2rem;">Post</mat-card-title>
+        <mat-toolbar color="primary">
+        <div class="header">
+            <button mat-icon-button (click)="goBack()">
+                <mat-icon color="white">arrow_back</mat-icon>
+            </button>
+            <b style="margin:0; font-size:1rem;">Post</b>
+        </div>
+        </mat-toolbar>
+        <mat-divider></mat-divider>
         <mat-card-content>
-            <textarea style=" color:white; width:auto; height:10rem;border-color:transparent; background-color: transparent;"></textarea>
-            <mat-divider></mat-divider>
+            <div class="userInfo">
+                <div class="userImage">
+                    <img src="https://picsum.photos/200" alt="" style="border-radius: 50%; width: 2rem; height: 2rem; border: 1px solid black;">
+                </div>
+                <div class="userName">
+                    <b>John Doe</b>
+                    <p style="font-size:0.8rem;color:gray;">@JohnDoe</p>
+                </div>
+                <mat-divider></mat-divider>
+            </div>
+            <mat-form-field appearance="outline" color="accent" style="width:100%;">
+                <mat-label style="color:white;">Write your next post!</mat-label>
+                <textarea matInput style="color:white;" cdkTextareaAutosize #autosize="cdkTextareaAutosize" 
+                cdkAutosizeMaxRows="20" cdkAutosizeMinRows="1"
+                maxlength="280"
+                ></textarea>
+            </mat-form-field>
         </mat-card-content>
+        <mat-card-actions style="width:100%; bottom:0;">
+            <!--post button-->
+            <button mat-raised-button color="primary" style="right:0; margin-bottom:1rem; margin-right: 1rem; position: fixed; ">Post</button>
+        </mat-card-actions>
     </mat-card>
 </div>
