created profile, auto login, and extras

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -9,7 +9,7 @@
       <app-comm-icon></app-comm-icon>
       <app-comm-icon></app-comm-icon>
     </div>  
-    <div class="bottom-icons" *ngIf="!isMobile">
+    <div class="bottom-icons">
       <mat-divider></mat-divider>
       <div class="message-icon">
         <a routerLink="/messages" routerLinkActive="active">
