--- a/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
+++ b/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
@@ -16,11 +16,11 @@
                 </div>
                 <div class="userName">
                     <b>John Doe</b>
-                    <p style="font-size:0.8rem;color:gray;">@JohnDoe</p>
+                    <p style="font-size:0.8rem;color:gray;">JohnDoe</p>
                 </div>
                 <mat-divider></mat-divider>
             </div>
-            <mat-form-field appearance="outline" color="accent" style="width:100%;">
+            <mat-form-field appearance="fill" color="primary" style="width:100%;">
                 <mat-label style="color:white;">Write your next post!</mat-label>
                 <textarea matInput style="color:white;" cdkTextareaAutosize #autosize="cdkTextareaAutosize" 
                 cdkAutosizeMaxRows="20" cdkAutosizeMinRows="1"
