--- a/src/app/components/navigation/mobilenav/mobilenav.component.html
+++ b/src/app/components/navigation/mobilenav/mobilenav.component.html
@@ -8,7 +8,7 @@
             <mat-icon>chat</mat-icon>
           </a>
           <span class="spacer"></span>
-          <a mat-icon-button (click)="toggleNav()">
+          <a mat-icon-button routerLink="/community" routerLinkActive="active">
             <mat-icon>people</mat-icon>
           </a>
           <span class="spacer"></span>
