--- a/src/app/components/navigation/toolbar/toolbar.component.html
+++ b/src/app/components/navigation/toolbar/toolbar.component.html
@@ -9,6 +9,8 @@
   </div>
     <div class="user-info"> 
       <span class="user-name" *ngIf="!isMobile" >John Doe</span>
+      <a routerLink="/profile" routerLinkActive="active">
       <img class="user-image" src="https://picsum.photos/200" alt="user profile picture">
+    </a>
     </div>
   </mat-toolbar>
