--- a/src/app/components/new-post-exploreview/new-post-exploreview.component.html
+++ b/src/app/components/new-post-exploreview/new-post-exploreview.component.html
@@ -1,15 +1,19 @@
-<mat-card style="background-color:rgba(0,0,0,0.5);">
+<mat-card style="background-color:rgba(0,0,0,0);">
     <mat-card-header>
         <div mat-card-avatar>
             <img src="https://picsum.photos/200" alt="" style="border-radius: 50%; width: 2rem; height: 2rem; border: 2px solid black;">
         </div>
         <mat-card-title>John Doe,</mat-card-title>
-        <mat-card-subtitle>what's on your mind?</mat-card-subtitle>
+        <mat-card-subtitle style="color: gray !important;">what's on your mind?</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-        <mat-form-field appearance="outline" style="width:100%;">
+        <mat-form-field color="primary" appearance="fill" style="width:100%;">
             <mat-label>Write your next post!</mat-label>
-            <textarea matInput></textarea>
+            <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" 
+            cdkAutosizeMaxRows="20" cdkAutosizeMinRows="1"
+            maxlength="280"
+            ></textarea>
         </mat-form-field>
+        <button mat-raised-button color="primary" style="float:right;">Post</button>
     </mat-card-content>
 </mat-card>
