--- a/src/app/components/post-exploreview/post-exploreview.component.html
+++ b/src/app/components/post-exploreview/post-exploreview.component.html
@@ -1,9 +1,9 @@
-<mat-card style="background-color: rgba(0, 0, 0, 0.5); color:#f5f5f5">
+<mat-card style="background-color: rgba(0, 0, 0, 0); color:#f5f5f5">
 <mat-card-content style="display:flex; flex-direction:row;">
     <img src="https://picsum.photos/200" alt="" style="border-radius: 50%; width: 3rem; height: 3rem; border: 2px solid black;">
     <div class="userInfo">
         <mat-card-title class="username">John Doe</mat-card-title>
-        <mat-card-subtitle class="userAt">@johndoe · 1h</mat-card-subtitle>
+        <mat-card-subtitle class="userAt">&#64;johndoe · 1h</mat-card-subtitle>
     </div>
 </mat-card-content>
 <mat-card-content style="padding:1rem;">
