--- a/src/app/components/navigation/toolbar/toolbar.component.css
+++ b/src/app/components/navigation/toolbar/toolbar.component.css
@@ -9,26 +9,25 @@
 }
 
 .user-info {
-    margin:0;
+    margin-right:1rem;
+    position:absolute;
+    right:0;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
+    z-index:999;
 }
 
 .center-icons{
-  padding-left: 42px;
+  position:absolute;
+  width:100%;
+  margin:0 auto;
   display:flex;
   flex-direction: row;
   align-items:center;
   justify-content: center;
-  margin:0 auto;
 }
 
 .user-name{
   padding-right:1rem;
 }  
-
-@media (max-width: 650px) {
-  *{
-    max-width:100%;
-  }
-}
