Set button as icon button

--- a/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
+++ b/src/app/pages/mobile/new-post-mobile/new-post-mobile.component.html
@@ -68,7 +68,7 @@
         #fileUpload
       />
       <div class="file-upload">
-        <button mat-raised-button color="primary" (click)="fileUpload.click()" [disabled]="this.form.disabled">
+        <button mat-icon-button color="primary" (click)="fileUpload.click()" [disabled]="this.form.disabled">
           <mat-icon>image</mat-icon>
         </button>
       </div>
