mid-exam quick commit

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -36,6 +36,13 @@ ngOnInit();"></app-edit-profile>
                         </div>
                     </div>
                     <mat-divider></mat-divider>
+
+                    <div class="no-posts">
+                        <mat-icon>
+                            sentiment_very_dissatisfied
+                        </mat-icon>
+                        <p>{{shownUser.displayName}} hasn't posted anything yet.</p>
+                    </div>
                 </div>
             </div>
         </div>
