--- a/src/app/components/navigation/toolbar/toolbar.component.html
+++ b/src/app/components/navigation/toolbar/toolbar.component.html
@@ -1,15 +1,15 @@
 <mat-toolbar color="primary" style="display:flex; position:fixed;top:0;">
   <div class="center-icons">
-    <a mat-icon-button routerLink="/feed" routerLinkActive="active">
+    <a mat-icon-button [routerLink]="routerLinkFeed" routerLinkActive="active">
       <mat-icon color="white">videogame_asset</mat-icon>
     </a>
-    <a *ngIf="!isMobile" routerLink="/feed" routerLinkActive="active" style="margin-left:1rem;text-decoration: none; color:white;">
+    <a *ngIf="!isMobile" [routerLink]="routerLinkFeed" routerLinkActive="active" style="margin-left:1rem;text-decoration: none; color:white;">
       <span>GameHub</span>
     </a>
   </div>
     <div class="user-info"> 
       <span class="user-name" *ngIf="!isMobile" >{{username}}</span>
-      <a [routerLink]="routerLink" style="line-height:0 !important;color:white;text-decoration:none;">
+      <a [routerLink]="routerLinkPicture" style="line-height:0 !important;color:white;text-decoration:none;">
       <img *ngIf="profilePictureURL" class="user-image" src="{{profilePictureURL}}" alt="user profile picture">
       <mat-icon class="material-symbols-outlined" style="font-size:32px!important;height:32px;width:32px;" *ngIf="!profilePictureURL">login</mat-icon>
       </a>
