--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -14,7 +14,6 @@
     justify-content:space-between;
 }
 
-
 .follow-button{
     border:1px solid white;
     border-radius:20px;
@@ -78,6 +77,11 @@
     margin-bottom:1rem;
 }
 
+.container{
+    height:calc(100vh - 56px);
+    overflow:hidden;
+}
+
 .actions{
     margin-top:1rem;
     margin-right:1rem;
@@ -100,6 +104,15 @@
     align-items:center;
 }
 
+.no-posts{
+    display:flex;
+    flex-direction:column;
+    margin-top:1rem;
+    align-items:center;
+    opacity: 0.5;
+    height: 6rem;
+}
+
 .banner{
     width:100vw;
     max-height:190px;
@@ -108,6 +121,13 @@
     border:0;
     top:0;
     size: cover;
+}
+
+.no-posts mat-icon{
+    font-size:50px;
+    width:50px;
+    height:50px;
+    margin-bottom:1rem;
 }
 
 @media (min-width:580px)
